--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h2>Spectacular Mountain</h2>
-<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
-
-</body>
-</html>
+Jenkisn pool build
